--- a/001/style.css
+++ b/001/style.css
@@ -44,9 +44,9 @@ nav ul {
 }
 
 .nav-list__item {
+  padding: 0 2rem;
   list-style-type: none;
   text-transform: uppercase;
-  padding: 0 2rem;
 }
 
 .site-name {
@@ -88,8 +88,56 @@ nav ul {
   background: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1024px) {
   .nav-list {
     display: none;
   }
+}
+
+.main-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: calc(3.5rem + 2vw) 0 3rem;
+}
+
+.main-header h1 {
+  width: 100%;
+  line-height: 1.1;
+  text-transform: uppercase;
+  font-size: clamp(2.5rem, calc(4rem + 2.5vw), 5rem);
+}
+
+.main-header h1:last-child {
+  text-align: right;
+}
+
+.main-header .dot {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 100%;
+  display: inline-block;
+  background: var(--black);
+}
+
+@media screen and (max-width: 600px) {
+  .main-header h1 {
+    font-size: 2.5rem
+  }
+  .main-header .dot {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
+.intro-image {
+  width: 100%;
+  height: 100%;
+  max-height: 600px;
+}
+
+.intro-image img {
+  width: 100%;
+  height: 100%;
+  /* max-height: 100%; */
 }
